--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 <!-- Page Header -->
 <header class="masthead"
-        style="background-image: url('https://images.unsplash.com/photo-1470092306007-055b6797ca72?ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80')">
+        style="background-image: url('https://images.unsplash.com/photo-1509824189536-24ab5d1ecb00?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80')">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
